--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --textColor: #eee;
     --textColor2: #ccc;
     --bodyBgColor: #222;
-    --linkColor: rgb(83, 159, 221);
+    --linkColor: rgb(91, 172, 238);
 }
 
 body,
@@ -59,6 +59,10 @@ nav ul {
 nav ul li {
     list-style: none;
     font-size: 1.2em;
+}
+
+nav ul ul li {
+    margin-left: 15px;
 }
 
 nav a,
@@ -165,7 +169,8 @@ a.anchor {
 section.heading {
     grid-area: span 1 / span 2;
     margin-top: 20px;
-    padding: 0;
+    padding: 0 5px;
+    text-align: center;
 }
 
 section.span2 {
